# aiosiduck

./: README.md  cert.pem  pyproject.toml  test.py
src/aiosiduck/: __init__.py  quic_client_protocol.py
