[project]
name = "aiosiduck"
version = "0.1.0"
description = "simple siduck for quic"
authors = [
    {name = "sothis", email = "382035562@qq.com"},
]
dependencies = [
    "aioquic>=0.9.25",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
