[project]
name = "siduckclient"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BIANHUIWORK\\bianhui", email = "bianhui0524@sina.com" }
]
dependencies = [
    "aioquic>=0.9.25",
    "aiosiduck>=0.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "siduckclient:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/siduckclient"]
